# Cassava-Disease-Prediction

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  data.dvc  dataset.dvc  pyproject.toml
.dvc/: config
.github/workflows/: hf_sync.yml
configs/: config.yaml
configs/data/: data.yaml
configs/model/: model1.yaml  model2.yaml  model3.yaml
configs/train/: train.yaml
deployment/: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
deployment/quantization/: quanitzer.py
deployment/triton/ensemble/: config.pbtxt
deployment/triton/ensemble/1/: model.py
deployment/triton/model1/: config.pbtxt
deployment/triton/model1/1/: model.onnx
deployment/triton/model2/: config.pbtxt
deployment/triton/model2/1/: model.onnx
deployment/triton/model3/: config.pbtxt
deployment/triton/model3/1/: model.onnx
outputs/2026-01-07/13-21-27/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/cassava_classifier/: commands.py
src/cassava_classifier/data/: datamodule.py  dataset.py
src/cassava_classifier/models/: components.py  model.py
src/cassava_classifier/pipelines/: convert.py  infer.py  tensorrt_inference.py  train.py  trt_convert.py
src/cassava_classifier/utils/: preprocessing.py
